--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-test
+Эта утилита создана для отчистки определённых файлов Windows для оптимизации
+Так же утилита предоставляет возможность удалить ненужные файлы KLauncher'а
+Ещё в утилите есть дополнительные опции во вкладве "Прочие утилиты" и не только
+Некоторые опции вызыввают отдельные программы для отчистки
